Header: fix size of user avatar icon at header

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -209,6 +209,12 @@
                             border-top: 4px solid #FFF;
                         }
                     }
+
+                    .avatar-wrap {
+                        width:30px;
+                        height: 30px;
+                        vertical-align: top;
+                    }
                 }
             }
         }
