Changes width and align of `Commit Date` column on `Code` menu.
Cause:
`Commit Date` string, a column title, can not be shown as one line on a div following `span1` class because of long.

Solution:
A class which is stylesheet for the column title is changed to `span2` class.
Also `text-align` of all the column's data is set to `right`.

Private-issue: 1518

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4008,13 +4008,14 @@ label.issue-item-row {
         border-bottom:2px solid #efefef;
         margin-bottom:5px;
         height:40px; line-height:40px;
+        .commitDate { text-align:right; padding-right:5px; }
         .filename { padding-left:5px; }
     }
     .listitem {
         border-bottom:1px solid #efefef;
         .filename { font-size:10pt; white-space:nowrap; .text-overflow; }
         .commitMsg { font-size:10pt; color:#7e7e7e; .text-overflow; }
-        .commitDate { font-size:8pt; color:#7e7e7e; white-space:nowrap; }
+        .commitDate { font-size:8pt; color:#7e7e7e; white-space:nowrap; text-align:right; padding-right:5px; }
     }
     [class^="depth-"],[class*=" depth-"] {
         .listhead { display:none; }
