--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -49,7 +49,7 @@
     			</dd>
 
     		    <dd style="position: relative;">
-                    @common.editor("body", posting.body, Map("tabindex"->"2","id"->"body"))
+                    @common.editor("body", posting.body, "tabindex=2")
     			</dd>
 
     			@if(isAllowedToNotice){
@@ -91,7 +91,7 @@ $(document).ready(function(){
 	});
 
     yobi.Mention({
-        target:'body',
+        target:'textarea[id^=editor-]',
         url : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, posting.getNumber, posting.asResource().getType().resource()).toString())"
     });
 });
