--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -137,7 +137,7 @@
 
         // yobi.Mention
         yobi.Mention({
-            "target": "comment-editor",
+            "target": "textarea[id^=editor-]",
             "url"   : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, post.getNumber, post.asResource().getType.resource()).toString())"
         });
 	});
