--- a/app/views/code/diff.scala.html
+++ b/app/views/code/diff.scala.html
@@ -216,7 +216,7 @@ List[playRepository.FileDiff],path:String)
         });
 
         yobi.Mention({
-            target:'comment-editor',
+            target:'textarea[id^=editor-]',
             url : "@Html(routes.ProjectApp.mentionListAtCommitDiff(project.owner, project.name, commit.getId).toString)"
         });
         
