--- a/app/views/code/svnDiff.scala.html
+++ b/app/views/code/svnDiff.scala.html
@@ -180,7 +180,7 @@
         });
 
         yobi.Mention({
-            target:'comment-editor',
+            target:'textarea[id^=editor-]',
             url : "@Html(routes.ProjectApp.mentionListAtCommitDiff(project.owner, project.name, commit.getId).toString)"
         });
     });
