--- a/app/views/common/reviewForm.scala.html
+++ b/app/views/common/reviewForm.scala.html
@@ -38,7 +38,7 @@
             <div class="write-comment-wrap">
                 <div class="pull-right"><button type="button" class="ybtn ybtn-default ybtn-small" data-toggle="close">&times;</button></div>
 
-                @common.editor("contents", "", Map("id"->"review-editor"))
+                @common.editor("contents")
 
                 @** fileUploader **@
                 @if(!UserApp.currentUser.isAnonymous){
