--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -127,7 +127,7 @@
 
                 <input type="text" name="title" id="title" placeholder="@Messages("title")" maxlength="maxlength" tabindex="1" class="text" value="@pullRequest.title">
                 <div style="position: relative;">
-                    @common.editor("body", pullRequest.body, Map("tabindex"->"2", "id"->"body"))
+                    @common.editor("body", pullRequest.body, "tabindex=2")
                 </div>
                 @common.fileUploader(ResourceType.PULL_REQUEST, null)
                 @common.markdown(project)
@@ -159,7 +159,7 @@ $(document).ready(function() {
 
     // yobi.Mention
     yobi.Mention({
-        "target": "body",
+        "target": "textarea[id^=editor-]",
         "url"   : "@routes.ProjectApp.mentionList(project.owner, project.name)"
     });
 });
