--- a/app/views/git/edit.scala.html
+++ b/app/views/git/edit.scala.html
@@ -117,7 +117,7 @@
 
                 <input type="text" name="title" id="title" placeholder="" maxlength="maxlength" tabindex="1" class="text" value="@pull.title">
                 <div style="position: relative;">
-                    @common.editor("body", pull.body, Map("tabindex"->"2","id"->"body"))
+                    @common.editor("body", pull.body, "tabindex=2")
                 </div>
 
                 @common.fileUploader(ResourceType.PULL_REQUEST, pull.id)
@@ -141,7 +141,7 @@
 
         // yobi.Mention
         yobi.Mention({
-            "target": "body",
+            "target": "textarea[id^=editor-]",
             "url"   : "@routes.ProjectApp.mentionList(project.owner, project.name)"
         });
 	});
