--- a/app/views/git/viewChanges.scala.html
+++ b/app/views/git/viewChanges.scala.html
@@ -180,16 +180,7 @@
     $(document).ready(function() {
         // yobi.Mention
         yobi.Mention({
-            target:'comment-editor',
-            @if(pull.getCurrentCommits.isEmpty) {
-                url : "@Html(routes.ProjectApp.mentionListAtPullRequest(pull.toProject.owner, pull.toProject.name, "", pull.id).toString())"
-            } else {
-                url : "@Html(routes.ProjectApp.mentionListAtPullRequest(pull.toProject.owner, pull.toProject.name, pull.getCurrentCommits.get(0).getCommitId, pull.id).toString())"
-            }
-        });
-
-        yobi.Mention({
-            target:'review-editor',
+            target:'textarea[id^=editor-]',
             @if(pull.getCurrentCommits.isEmpty) {
                 url : "@Html(routes.ProjectApp.mentionListAtPullRequest(pull.toProject.owner, pull.toProject.name, "", pull.id).toString())"
             } else {
