--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -58,7 +58,7 @@
                 <div class="span9">
                     <dl>
                         <dd style="position: relative;">
-                            @common.editor("body", "", Map("tabindex"->"2","id"->"body"))
+                            @common.editor("body", "", "tabindex=2")
                         </dd>
                     </dl>
 
@@ -149,7 +149,7 @@
 
         // yobi.Mention
         yobi.Mention({
-            "target": "body",
+            "target": "textarea[id^=editor-]",
             "url"   : "@routes.ProjectApp.mentionList(project.owner, project.name)"
         });
     });
