--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -60,7 +60,7 @@
                 <div class="span9">
                     <dl>
                         <dd style="position: relative;">
-                            @common.editor("body", issue.body, Map("tabindex"->"2","id"->"body"))
+                            @common.editor("body", issue.body, "tabindex=2")
                         </dd>
                     </dl>
 
@@ -194,7 +194,7 @@
 
         // yobi.Mention
         yobi.Mention({
-            "target": "body",
+            "target": "textarea[id^=editor-]",
             "url"   : "@routes.ProjectApp.mentionList(project.owner, project.name)"
         });
    });
