--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -371,7 +371,7 @@
         });
 
         yobi.Mention({
-            target:'comment-editor',
+            target:'textarea[id^=editor-]',
             url : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, issue.getNumber, issue.asResource().getType.resource()).toString())"
         });
     });
