Editor: Fix The uploaded image file could not be put into the body of editor
- change selector syntax for textarea
- add data attribute for javascript selector on textarea : data-editro-mode="body"
- fix javascript error for validation at milestone

--- a/app/views/board/create.scala.html
+++ b/app/views/board/create.scala.html
@@ -85,7 +85,7 @@
 $(document).ready(function(){
 	$yobi.loadModule("board.Write", {
 		"sMode"			 : "new",
-		"elTextarea"	 : $("#body"),
+		"elTextarea"	 : 'textarea[data-editor-mode="body"]',
 		"sUploaderAction": "@routes.AttachmentApp.uploadFile()"
 	});
 
