--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -39,7 +39,7 @@
 
         <div id="edit-@wrapId" class="tab-pane active">
             <div class="textarea-box">
-                <textarea name="@editorName" class="content comment nm" markdown="true" id="editor-@editorName-@wrapId"
+                <textarea name="@editorName" class="content comment nm" data-editor-mode="body" markdown="true" id="editor-@editorName-@wrapId"
                     @additionalAttr>@textValue</textarea>
             </div>
         </div>
