--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -86,7 +86,7 @@
 $(document).ready(function(){
 	$yobi.loadModule("board.Write", {
 		"sMode"			 : "edit",
-		"elTextarea"	 : $("#body"),
+		"elTextarea"	 : 'textarea[data-editor-mode="body"]',
 		"sUploaderAction": "@routes.AttachmentApp.uploadFile"
 	});
 
