--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -188,7 +188,7 @@
             "sIssueId"          : "@issue.getNumber",
             "sIssueFormURL"     : "@routes.IssueApp.newIssueForm(project.owner, project.name)",
             "sIssueListURL"     : "@routes.IssueApp.issues(project.owner, project.name)",
-            "elTextarea"        : $("#body"),
+            "elTextarea"        : 'textarea[data-editor-mode="body"]',
             "elMilestoneRefresh": $("#milestoneOption .yobicon-refresh")
         });
 
