PullRequest: fxied to use @Messages

--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -116,7 +116,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>커밋 개수</th>
+                                <th>@Messages("pullRequest.commmit.count")</th>
                                 <td id="commitCount">
                                     @Messages("pullRequest.is.checking")
                                 </td>
