Editor: Fix wrong selection to editor of commnet for file upload
- all editor has same data attribute that is "data-editor-mode" then wrong selection to editor of commnet.

--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -49,7 +49,7 @@
     			</dd>
 
     		    <dd style="position: relative;">
-                    @common.editor("body", posting.body, "tabindex=2")
+                    @common.editor("body", posting.body, "tabindex=2", "content-body")
     			</dd>
 
     			@if(isAllowedToNotice){
@@ -86,7 +86,7 @@
 $(document).ready(function(){
 	$yobi.loadModule("board.Write", {
 		"sMode"			 : "edit",
-		"elTextarea"	 : 'textarea[data-editor-mode="body"]',
+		"elTextarea"	 : 'textarea[data-editor-mode="content-body"]',
 		"sUploaderAction": "@routes.AttachmentApp.uploadFile"
 	});
 
