--- a/app/views/common/commentUpdateForm.scala.html
+++ b/app/views/common/commentUpdateForm.scala.html
@@ -26,7 +26,7 @@
 
         <div class="write-comment-box">
             <div class="write-comment-wrap">
-                @common.editor("contents", contents)
+                @common.editor("contents", contents,"", "update-comment-body")
 
                 <div class="right-txt comment-update-button">
                     <button type="button" class="ybtn ybtn-cancel" data-comment-id="@commentId">@Messages("button.cancel")</button>
