--- a/app/views/board/create.scala.html
+++ b/app/views/board/create.scala.html
@@ -85,7 +85,7 @@
 $(document).ready(function(){
 	$yobi.loadModule("board.Write", {
 		"sMode"			 : "new",
-		"elTextarea"	 : 'textarea[data-editor-mode="body"]',
+		"elTextarea"	 : 'textarea[data-editor-mode="content-body"]',
 		"sUploaderAction": "@routes.AttachmentApp.uploadFile()"
 	});
 
