--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -127,7 +127,7 @@
 
                 <input type="text" name="title" id="title" placeholder="@Messages("title")" maxlength="maxlength" tabindex="1" class="text" value="@pullRequest.title">
                 <div style="position: relative;">
-                    @common.editor("body", pullRequest.body, "tabindex=2")
+                    @common.editor("body", pullRequest.body, "tabindex=2", "content-body")
                 </div>
                 @common.fileUploader(ResourceType.PULL_REQUEST, null)
                 @common.markdown(project)
