--- a/app/views/git/edit.scala.html
+++ b/app/views/git/edit.scala.html
@@ -117,7 +117,7 @@
 
                 <input type="text" name="title" id="title" placeholder="" maxlength="maxlength" tabindex="1" class="text" value="@pull.title">
                 <div style="position: relative;">
-                    @common.editor("body", pull.body, "tabindex=2")
+                    @common.editor("body", pull.body, "tabindex=2", "content-body")
                 </div>
 
                 @common.fileUploader(ResourceType.PULL_REQUEST, pull.id)
