--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -60,7 +60,7 @@
                 <div class="span9">
                     <dl>
                         <dd style="position: relative;">
-                            @common.editor("body", issue.body, "tabindex=2")
+                            @common.editor("body", issue.body, "tabindex=2", "content-body")
                         </dd>
                     </dl>
 
@@ -188,7 +188,7 @@
             "sIssueId"          : "@issue.getNumber",
             "sIssueFormURL"     : "@routes.IssueApp.newIssueForm(project.owner, project.name)",
             "sIssueListURL"     : "@routes.IssueApp.issues(project.owner, project.name)",
-            "elTextarea"        : 'textarea[data-editor-mode="body"]',
+            "elTextarea"        : 'textarea[data-editor-mode="content-body"]',
             "elMilestoneRefresh": $("#milestoneOption .yobicon-refresh")
         });
 
