PullRequest: fixed a bug in the code-reivew tab
When a new pull-request is created and a user click code-reivew tab quickly before creating mergedCommitIdFrom and mergedCommitIdTo, a server error occures because it cannot generate diff without those variables that are going to be created after attemptMerge finished.

I've added 'isDiffable' method that can be used to know if it can generate diffs or not. And I used it before showing diffs in the code-review tab.

--- a/app/views/git/viewChanges.scala.html
+++ b/app/views/git/viewChanges.scala.html
@@ -119,7 +119,7 @@
 
                     <div class="diff-body diffs-wrap-scroll">
                         @partial_state(project, pull, false, false)
-                        @if(pull.isConflict == false){
+                        @if(pull.isDiffable){
                             @views.html.partial_diff(pull.getDiff(commitId), pull.getCodeCommentThreadsForChanges(commitId), pull.toProject, pull.toProject)
                         }
                         <div class="btnPop"><button type="button" class="ybtn ybtn-info ybtn-mini"><i class="yobicon-post2"></i></button></div>
