Changes `Commit Date` to `Author Date` which is column title on Commit History.
Cause:
Altough `Commit Date` is a column title on commit history page, dates are listed as author date.

Solution:
`Commit Date` is changed to `Author Date`.

Private-issue: 1022

--- a/app/views/code/history.scala.html
+++ b/app/views/code/history.scala.html
@@ -133,7 +133,7 @@
                                 @if(path != null){
                                 <td class="browse"></td>
                                 }
-                                <td class="date"><strong>@Messages("code.commitDate")</strong></td>
+                                <td class="date"><strong>@if(project.isGit) { @Messages("code.authorDate") } else { @Messages("code.commitDate") }</strong></td>
                                 <td class="author"><strong>@Messages("code.author")</strong></td>
                             </tr>
                         </thead>
