PullRequest: fixed to autogenerate title and body

--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -125,20 +125,11 @@
                     </div>
                 </div>
 
-                <input type="text" name="title" id="title" placeholder="@Messages("title")" maxlength="maxlength" tabindex="1" class="text" value="@pullRequest.title">
-                <div style="position: relative;">
-                    @common.editor("body", pullRequest.body, "tabindex=2", "content-body")
-                </div>
-                @common.fileUploader(ResourceType.PULL_REQUEST, null)
-                @common.markdown(project)
-
-                <div class="actions">
-                    <button type="submit" class="ybtn ybtn-success">@Messages("button.save")</button>
-                    <a href="javascript:history.back();" class="ybtn">@Messages("button.cancel")</a>
-                </div>
-
                 <div id="frmWrap">
-                    @* this area will be filled with asynchronously by yobi.git.Write.js after load this page. *@
+                    @* this area will be replaced with asynchronously by yobi.git.Write.js after load this page. *@
+                    <input type="hidden" id="title">
+                    <textarea id="body" style="display: none;" data-editor-mode="content-body">@pullRequest.body</textarea>
+                    <div id="spin" style="position: absolute; top:50%; left:50%"></div>
                 </div>
             }
         </div>
