--- a/app/views/git/partial_diff.scala.html
+++ b/app/views/git/partial_diff.scala.html
@@ -43,6 +43,18 @@
     }
 }
 
+<input type="text" name="title" id="title" placeholder="@Messages("title")" maxlength="255" tabindex="1" class="text" value="@pullRequest.title">
+<div style="position: relative;">
+    @common.editor("body", pullRequest.body, "tabindex=2", "content-body")
+</div>
+@common.fileUploader(ResourceType.PULL_REQUEST, null)
+@common.markdown(project)
+
+<div class="actions">
+    <button type="submit" class="ybtn ybtn-success">@Messages("button.save")</button>
+    <a href="javascript:history.back();" class="ybtn">@Messages("button.cancel")</a>
+</div>
+
 <div id="spin" style="position: absolute; top:50%; left:50%"></div>
 
 <div id="diff">
